# k8s_fastapi_pod

./: .pre-commit-config.yaml  README.md  dockerfile
.github/workflows/: ci.yaml
backend/: dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/src/: app.py
backend/src/routes/: __init__.py  healthcheck.py  messages.py
backend/tests/: conftest.py  test_app.py
backend/tests/routes/: test_healthcheck.py  test_messages.py
