[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["alexau <alexuau922@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.2"
uvloop = "^0.19.0"
uvicorn = "^0.27.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
mypy = "^1.8.0"
httpx = "^0.27.0"
pytest-anyio = "^0.0.0"
anyio = "^4.3.0"
trio = "^0.24.0"
pytest-cov = "^4.1.0"

[tool.coverage.report]
fail_under = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
